tests/negative/traits/mismatch_receiver_extra.orng
// mismatch_receiver_extra.orng:10:14: error: trait `My_Trait` does not specify a receiver for method `f`, got receiver `self`
//     fn f(self) -> () {}
//             ^
// 
trait My_Trait {
    fn f() -> ()
}

impl My_Trait for Int {
    fn f(self) -> () {}
}

fn main() -> Int {
    4
}